# justdavis-ansible

./: .gitignore  CLAUDE.md  README.md  ansible-playbook-wrapper  ansible.cfg  hosts  install_roles.yml  pyproject.toml  requirements.frozen.txt  requirements.txt  site.yml  test-provision.yml  test-teardown.yml  test.sh
.claude/: settings.json
.claude/agents/: ansible-code-reviewer.md  ansible-performance-profiler.md  ansible-test-error-checker.md
.github/workflows/: claude-code-review.yml
bootstrap/: README.md  brooks-wsl-config-1.ps1  brooks-wsl-config-2.bash  brooks-wsl.ps1  eddings-upgrade-notes.md  wsl-config-1.ps1  wsl-config-2.bash
dev/: todos.md
dev/product/: 2025-09-06-development-sandbox-vm.md  2025-09-06-gui-development-vm.md  2025-09-07-network-bridge-architecture.md
docs/plans/: 2025-11-24-pipx-to-uv-migration-design.md  2025-11-24-pipx-to-uv-migration.md  2025-11-25-multi-user-test-infrastructure-design.md  2025-11-26-separate-durable-ephemeral-config-design.md
files/: eddings_network_interfaces
group_vars/all/: main.yml  vault.yml
handlers/: main.yml
host_vars/eddings.justdavis.com/: main.yml
host_vars/jordan-u.karlanderica.justdavis.com/: main.yml
host_vars/krout.karlanderica.justdavis.com/: main.yml
logs/: .gitignore
roles/dev_sandbox/: README.md
roles/eddings_base/: README.md
roles/immich/: README.md
roles/immitch/: README.md  TODO.md
tasks/: eddings_networking.yml
test/: cleanup-dns.sh  hosts-test  provision.yml  teardown.yml  test-provision.yml  test-teardown.yml  test.sh  vars_aws_provisioning_karlmdavis.yml
(+278 files in other folders)
